CPOP Gain: $ 14.11 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4
CPOP Gain: $ 2.86 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_TR_QP_DB30
CPOP Gain: $ -21.11 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_RV_TR_DB30
CPOP Gain: $ 3.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_RV_AV_DB30
CPOP Gain: $ 3.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_RV_AL_DB30
CPOP Gain: $ 2.86 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_RV_QP_DB30
CPOP Gain: $ -21.11 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_HM_TR_DB30
CPOP Gain: $ 3.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_HM_AV_DB30
CPOP Gain: $ 2.86 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_HM_QP_DB30
CPOP Gain: $ 3.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_IT_QL_DB30
CPOP Gain: $ -1.88 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_IT_QP_DB30
CPOP Gain: $ 1.21 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_TR_IR5
CPOP Gain: $ -134.26 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_TR_QP
CPOP Gain: $ -166.34 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_QP_IR5
CPOP Gain: $ -21.68 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_RV_TR
CPOP Gain: $ 4.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_RV_AV
CPOP Gain: $ 1.99 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_RV_AL
CPOP Gain: $ -192.41 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_RV_QP
CPOP Gain: $ -21.68 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_HM_TR
CPOP Gain: $ 4.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_HM_AV
CPOP Gain: $ -192.12 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_HM_QP
CPOP Gain: $ -6.04 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_IT_QL
CPOP Gain: $ -192.12 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_IT_QP
CPOP Gain: $ -5338.36 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_AO_AC
CPOP Gain: $ 14.11 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_RV
CPOP Gain: $ 1.21 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_IR5
CPOP Gain: $ -21.68 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_TR
CPOP Gain: $ 4.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_AV
CPOP Gain: $ 1.99 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_AL
CPOP Gain: $ 2.03 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_VI
CPOP Gain: $ 13 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_LI
CPOP Gain: $ -192.12 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_QP
CPOP Gain: $ 14.11 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_HM
CPOP Gain: $ -7.27 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_SS
CPOP Gain: $ -6.04 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_QL
CPOP Gain: $ 3.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_DB30
CPOP Gain: $ 13.57 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_AO
CPOP Gain: $ -920.44 Win %: 0 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_AC
CPOP Gain: $ 14.11 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB4_OS4_CB4_CS4_IT
CPOP Gain: $ 2.86 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_TR_QP_DB30
CPOP Gain: $ -21.19 Win %: 0 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_RV_TR_DB30
CPOP Gain: $ 3.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_RV_AV_DB30
CPOP Gain: $ 3.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_RV_AL_DB30
CPOP Gain: $ 2.86 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_RV_QP_DB30
CPOP Gain: $ -21.19 Win %: 0 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_HM_TR_DB30
CPOP Gain: $ 3.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_HM_AV_DB30
CPOP Gain: $ 2.86 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_HM_QP_DB30
CPOP Gain: $ 3.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_IT_QL_DB30
CPOP Gain: $ -1.88 Win %: 0 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_IT_QP_DB30
CPOP Gain: $ 1.21 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_TR_IR5
CPOP Gain: $ -134.34 Win %: 0 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_TR_QP
CPOP Gain: $ -163.88 Win %: 0 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_QP_IR5
CPOP Gain: $ -21.76 Win %: 0 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_RV_TR
CPOP Gain: $ 4.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_RV_AV
CPOP Gain: $ 1.99 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_RV_AL
CPOP Gain: $ -192.8 Win %: 0 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_RV_QP
CPOP Gain: $ -21.76 Win %: 0 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_HM_TR
CPOP Gain: $ 4.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_HM_AV
CPOP Gain: $ -192.6 Win %: 0 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_HM_QP
CPOP Gain: $ -6.04 Win %: 0 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_IT_QL
CPOP Gain: $ -192.6 Win %: 0 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_IT_QP
CPOP Gain: $ -5329.86 Win %: 0 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_AO_AC
CPOP Gain: $ 14.11 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_RV
CPOP Gain: $ 1.21 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_IR5
CPOP Gain: $ -21.76 Win %: 0 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_TR
CPOP Gain: $ 4.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_AV
CPOP Gain: $ 1.99 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_AL
CPOP Gain: $ 2.03 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_VI
CPOP Gain: $ 13 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_LI
CPOP Gain: $ -192.6 Win %: 0 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_QP
CPOP Gain: $ 14.11 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_HM
CPOP Gain: $ -8.47 Win %: 0 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_SS
CPOP Gain: $ -6.04 Win %: 0 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_QL
CPOP Gain: $ 3.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_DB30
CPOP Gain: $ 14.11 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_AO
CPOP Gain: $ -1485.17 Win %: 0 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_AC
CPOP Gain: $ 14.11 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB3_OS3_CB4_CS4_IT
CPOP Gain: $ 2.86 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_TR_QP_DB30
CPOP Gain: $ -21.11 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_RV_TR_DB30
CPOP Gain: $ 3.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_RV_AV_DB30
CPOP Gain: $ 3.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_RV_AL_DB30
CPOP Gain: $ 2.86 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_RV_QP_DB30
CPOP Gain: $ -21.11 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_HM_TR_DB30
CPOP Gain: $ 3.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_HM_AV_DB30
CPOP Gain: $ 2.86 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_HM_QP_DB30
CPOP Gain: $ 3.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_IT_QL_DB30
CPOP Gain: $ -1.88 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_IT_QP_DB30
CPOP Gain: $ 1.21 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_TR_IR5
CPOP Gain: $ -134.26 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_TR_QP
CPOP Gain: $ -167.76 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_QP_IR5
CPOP Gain: $ -21.68 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_RV_TR
CPOP Gain: $ 4.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_RV_AV
CPOP Gain: $ 1.99 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_RV_AL
CPOP Gain: $ -194.39 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_RV_QP
CPOP Gain: $ -21.68 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_HM_TR
CPOP Gain: $ 4.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_HM_AV
CPOP Gain: $ -194.19 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_HM_QP
CPOP Gain: $ -6.04 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_IT_QL
CPOP Gain: $ -194.19 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_IT_QP
CPOP Gain: $ -5312.66 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_AO_AC
CPOP Gain: $ 14.11 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_RV
CPOP Gain: $ 1.21 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_IR5
CPOP Gain: $ -21.68 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_TR
CPOP Gain: $ 4.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_AV
CPOP Gain: $ 1.99 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_AL
CPOP Gain: $ 2.03 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_VI
CPOP Gain: $ 13 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_LI
CPOP Gain: $ -194.19 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_QP
CPOP Gain: $ 14.11 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_HM
CPOP Gain: $ -7.47 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_SS
CPOP Gain: $ -6.04 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_QL
CPOP Gain: $ 3.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_DB30
CPOP Gain: $ 14.11 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_AO
CPOP Gain: $ -2522.94 Win %: 0 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_AC
CPOP Gain: $ 14.11 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB2_OS2_CB4_CS4_IT
CPOP Gain: $ 2.86 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_TR_QP_DB30
CPOP Gain: $ -23.24 Win %: 0 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_RV_TR_DB30
CPOP Gain: $ 3.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_RV_AV_DB30
CPOP Gain: $ 3.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_RV_AL_DB30
CPOP Gain: $ 2.86 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_RV_QP_DB30
CPOP Gain: $ -23.24 Win %: 0 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_HM_TR_DB30
CPOP Gain: $ 3.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_HM_AV_DB30
CPOP Gain: $ 2.86 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_HM_QP_DB30
CPOP Gain: $ 3.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_IT_QL_DB30
CPOP Gain: $ -1.88 Win %: 0 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_IT_QP_DB30
CPOP Gain: $ 1.21 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_TR_IR5
CPOP Gain: $ -136.39 Win %: 0 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_TR_QP
CPOP Gain: $ -178.24 Win %: 0 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_QP_IR5
CPOP Gain: $ -23.81 Win %: 0 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_RV_TR
CPOP Gain: $ 4.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_RV_AV
CPOP Gain: $ 1.99 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_RV_AL
CPOP Gain: $ -204.35 Win %: 0 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_RV_QP
CPOP Gain: $ -23.81 Win %: 0 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_HM_TR
CPOP Gain: $ 4.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_HM_AV
CPOP Gain: $ -201.24 Win %: 0 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_HM_QP
CPOP Gain: $ -6.04 Win %: 0 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_IT_QL
CPOP Gain: $ -201.24 Win %: 0 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_IT_QP
CPOP Gain: $ -4686.87 Win %: 0 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_AO_AC
CPOP Gain: $ 14.11 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_RV
CPOP Gain: $ 1.21 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_IR5
CPOP Gain: $ -23.81 Win %: 0 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_TR
CPOP Gain: $ 4.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_AV
CPOP Gain: $ 1.99 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_AL
CPOP Gain: $ 2.03 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_VI
CPOP Gain: $ 13 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_LI
CPOP Gain: $ -201.24 Win %: 0 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_QP
CPOP Gain: $ 14.11 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_HM
CPOP Gain: $ -4.68 Win %: 0 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_SS
CPOP Gain: $ -6.04 Win %: 0 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_QL
CPOP Gain: $ 3.05 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_DB30
CPOP Gain: $ 14.11 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_AO
CPOP Gain: $ -4560.34 Win %: 0 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_AC
CPOP Gain: $ 14.11 Win %: 100.00 in 1 days with algo TB1_PL_QM_OB1_OS1_CB4_CS4_IT
